allprojects {
    group = 'com.github.soltaufintel.amalia'
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply plugin: 'eclipse'
    
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
    
    repositories {
        mavenCentral()
        maven { url 'https://jitpack.io' }
    }
    
    java {
        withSourcesJar()
    }
    
    publishing { // for jitpack.io
        publications {
            maven(MavenPublication) {
                groupId project.group
                artifactId project.name
                version findProperty('version')
                from components.java
            }
        }
    }
}
